plugins {
  id 'application'
  id 'idea'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '4.0.7'
  id 'org.owasp.dependencycheck' version '12.2.1'
  id 'com.github.ben-manes.versions' version '0.56.0'
  id 'com.github.spacialcircumstances.gradle-cucumber-reporting' version '0.1.25'
  id 'org.sonarqube' version '7.3.1.8318'
  id 'uk.gov.hmcts.java' version '0.12.70'
}

group = 'uk.gov.hmcts.reform'

// Remove these overrides when Spring Boot manages the same or newer fixed versions.
ext['jackson-2-bom.version'] = '2.21.5'
ext['log4j2.version'] = '2.25.5'
ext['tomcat.version'] = '11.0.24'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }
}

idea {
  module {
    // config to allow Intelij to mark test source and resource files correctly to help linting tools
    testSources.from(java.sourceSets.functionalTest.java.srcDirs)
    testSources.from(java.sourceSets.integrationTest.java.srcDirs)
    testResources.from(java.sourceSets.functionalTest.resources.srcDirs)
    testResources.from(java.sourceSets.integrationTest.resources.srcDirs)
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "-Werror"
}

tasks.withType(Copy) {
  duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.withType(Test) {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

test {
  generateCucumberReports.enabled = true
  failFast = true
  jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/sun.security.util=ALL-UNNAMED' ]
}

task functional(type: Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath

  generateCucumberReports.enabled = false

  doLast {
    generateCucumberReports.enabled = true

    javaexec {
      mainClass = "uk.gov.hmcts.reform.cpo.befta.CasePaymentOrdersBeftaMain"
      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
      args = [
               //'--strict',
               '--threads', '10',
               '--plugin', "json:${rootDir}/target/cucumber.json",
               '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
               '--tags', 'not @Ignore',
               '--glue', 'uk.gov.hmcts.befta.player',
               '--glue', 'uk.gov.hmcts.reform.cpo.befta',
               'src/functionalTest/resources/features'
             ]
      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/sun.security.util=ALL-UNNAMED' ]
    }
  }

  finalizedBy {
    generateCucumberReports {
      doLast{
        delete "${rootDir}/BEFTA Report for Functional Tests/"
        new File("${rootDir}/BEFTA Report for Functional Tests").mkdirs()
        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Functional Tests"))

        logger.quiet("Functional test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Functional%20Tests/overview-features.html")
      }
    }
  }

  outputs.upToDateWhen { false }
}

task integration(type: Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {

  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath

  generateCucumberReports.enabled = false

  doLast {
    generateCucumberReports.enabled = true
    javaexec {
      mainClass = "uk.gov.hmcts.reform.cpo.befta.CasePaymentOrdersBeftaMain"
      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
      args = [
               //'--strict',
               '--plugin', "json:${rootDir}/target/cucumber.json",
               '--plugin', "junit:${buildDir}/test-results/smoke/cucumber.xml",
               '--tags', '@Smoke and not @Ignore',
               '--glue', 'uk.gov.hmcts.befta.player',
               '--glue', 'uk.gov.hmcts.reform.cpo.befta',
               'src/functionalTest/resources/features'
             ]
      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
      jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/sun.security.util=ALL-UNNAMED' ]
    }
  }

  finalizedBy {
    generateCucumberReports {
      doLast{
        delete "${rootDir}/BEFTA Report for Smoke Tests/"
        new File("${rootDir}/BEFTA Report for Smoke Tests").mkdirs()
        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file("${rootDir}/BEFTA Report for Smoke Tests"))

        logger.quiet("Smoke test report moved to ---> file://${rootDir}/BEFTA%20Report%20for%20Smoke%20Tests/overview-features.html")
      }
    }
  }

  outputs.upToDateWhen { false }
}

cucumberReports {
  outputDir = file("${rootDir}/target/cucumber")
  reports = files("${rootDir}/target/cucumber.json")
}

task fortifyScan(type: JavaExec)  {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.base/sun.security.util=ALL-UNNAMED']
}

task customCleanBeftaReports(type:Delete) {
  delete "${rootDir}/BEFTA Report for Smoke Tests/"
  delete "${rootDir}/BEFTA Report for Functional Tests/"
  delete "${rootDir}/target/cucumber"
  delete "${rootDir}/target/cucumber.json"
}
tasks.clean.dependsOn(tasks.customCleanBeftaReports)


jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: cpo-case-payment-orders-api"
    property "sonar.projectKey", "uk.gov.hmcts.reform:cpo-case-payment-orders-api-1"
    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation.get().asFile.path}"
  }
}

configurations {
  testAnnotationProcessor.extendsFrom(annotationProcessor)
  integrationTestAnnotationProcessor.extendsFrom(annotationProcessor)
  functionalTestAnnotationProcessor.extendsFrom(annotationProcessor)
}

def versions = [
  lombok          : '1.18.46',
  mapstruct       : '1.6.3',
  lombokMapBinding: '0.2.0',
  reformLogging   : '8.0.0',
  springCloud     : '2025.1.2',
]

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

apply from: './gradle/suppress.gradle'
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyManagement {
  imports {
    mavenBom "org.springframework.cloud:spring-cloud-dependencies:${versions.springCloud}"
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    name = "AzureArtifacts"
    url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
  }
}

dependencies {

  // Spring dependencies
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webmvc'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aspectj'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jackson'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-flyway'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security-oauth2-resource-server'
  implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '3.0.3'

  // HMCTS dependencies
  implementation group: 'com.github.hmcts', name: 'idam-java-client', version: '4.0.0'
  implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '6.0.1'
  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging


  implementation group: 'com.auth0', name:'java-jwt', version:'4.6.0'
  implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.2.4'
  implementation group: 'commons-validator', name: 'commons-validator', version: '1.10.1'
  implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.13.0'
  implementation group: 'org.dom4j', name: 'dom4j', version: '2.2.0'
  implementation group: 'org.hibernate.orm', name: 'hibernate-envers'
  implementation group: 'org.flywaydb', name: 'flyway-database-postgresql'
  implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  implementation group: 'xerces', name: 'xercesImpl', version: '2.12.2'

  compileOnly group: 'org.mapstruct', name: 'mapstruct', version: versions.mapstruct
  compileOnly group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: versions.lombokMapBinding
  runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.7.13'
  annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: versions.mapstruct
  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  annotationProcessor group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: versions.lombokMapBinding


  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-webmvc-test'
  testImplementation group: 'org.springframework.boot',
                     name: 'spring-boot-starter-security-oauth2-resource-server-test'
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa-test'
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-flyway-test'
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator-test'
  testImplementation group: 'com.google.guava', name: 'guava', version: '33.6.0-jre' // Needed for BEFTA
  testImplementation group: 'org.apiguardian', name: 'apiguardian-api', version: '1.1.2'

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  integrationTestImplementation group: 'org.testcontainers', name: 'testcontainers-postgresql'
  integrationTestImplementation group: 'org.wiremock.integrations',
                                name: 'wiremock-spring-boot-standalone',
                                version: '4.2.1'

  functionalTestImplementation group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.25.4'
  functionalTestImplementation group: 'com.github.hmcts', name: 'befta-fw', version: '9.2.8-rc1'
  functionalTestImplementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '4.0.9'
  functionalTestImplementation 'com.github.hmcts:fortify-client:1.4.10:all'
  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all'
  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath
}

application {
  mainClass = 'uk.gov.hmcts.reform.cpo.Application'
}

bootJar {
  archiveFileName = 'cpo-case-payment-orders-api.jar'

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
